style: docs formatted

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -94,11 +94,11 @@ text := i18nInstance.Get("en", "pages.home.heading")
 
 Each language has its own URL path:
 
-| Language | URL Pattern | Example |
-|----------|-------------|---------|
-| English | `/en/*` | `/en/about` |
-| Turkish | `/tr/*` | `/tr/hakkinda` |
-| German | `/de/*` | `/de/uber` |
+| Language | URL Pattern | Example        |
+| -------- | ----------- | -------------- |
+| English  | `/en/*`     | `/en/about`    |
+| Turkish  | `/tr/*`     | `/tr/hakkinda` |
+| German   | `/de/*`     | `/de/uber`     |
 
 ### Route Configuration
 
@@ -146,8 +146,7 @@ Will prefer: tr → tr-TR → en-US → en → default
 
 ```html
 <div class="lang-switcher">
-  {{- $urls := alternateURLs .Canonical}}
-  {{- range $lang, $url := $urls}}
+  {{- $urls := alternateURLs .Canonical}} {{- range $lang, $url := $urls}}
   <a href="{{$url}}" class="lang-link{{if eq $lang $.Lang}} active{{end}}">
     {{$lang}}
   </a>
@@ -182,16 +181,18 @@ Alternate language links for search engines:
 ```html
 <link rel="alternate" hreflang="en" href="https://example.com/en/about" />
 <link rel="alternate" hreflang="tr" href="https://example.com/tr/hakkinda" />
-<link rel="alternate" hreflang="x-default" href="https://example.com/en/about" />
+<link
+  rel="alternate"
+  hreflang="x-default"
+  href="https://example.com/en/about"
+/>
 ```
 
 ### Template Functions
 
 ```html
-{{canonicalURL .Canonical .Lang}}
-{{alternateLinks .Canonical}}
-{{alternateURLs .Canonical}}
-{{pathForLanguage .Canonical "tr"}}
+{{canonicalURL .Canonical .Lang}} {{alternateLinks .Canonical}} {{alternateURLs
+.Canonical}} {{pathForLanguage .Canonical "tr"}}
 ```
 
 ## Language Middleware Configuration
