docs: add localePath function documentation
- Update templates.md with localePath usage examples
- Update routing.md with GetLocalePath reference
- Update i18n.md with localePath template function
- Explain why to use localePath instead of hardcoded paths

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -191,8 +191,10 @@ Alternate language links for search engines:
 ### Template Functions
 
 ```html
-{{canonicalURL .Canonical .Lang}} {{alternateLinks .Canonical}} {{alternateURLs
-.Canonical}} {{pathForLanguage .Canonical "tr"}}
+{{canonicalURL .Canonical .Lang}}
+{{alternateLinks .Canonical}}
+{{alternateURLs .Canonical}}
+{{localePath "/about" .Lang}}
 ```
 
 ## Language Middleware Configuration
