feat: make documentation English-only
- Remove Turkish routes for docs (no Turkish content available)
- Show "Docs" link in header only for English language
- Change nav.docs translation from "Documents" to "Docs"

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,8 @@
 {
   "nav": {
     "home": "Home",
-    "about": "About"
+    "about": "About",
+    "docs": "Docs"
   },
   "footer": {
     "copyright": "Statigo Framework. Built with Go."
