fix: add Turkish routes for docs to satisfy registry validation
- Add Turkish routes (/tr/docs/*) for all documentation
- Routes will show English content (until translations are added)
- Update header to show docs link for both languages
- Change tr "Dokümanlar" to "Docs" for consistency

--- a/translations/tr.json
+++ b/translations/tr.json
@@ -2,7 +2,7 @@
   "nav": {
     "home": "Ana Sayfa",
     "about": "Hakkında",
-    "docs": "Dokümanlar"
+    "docs": "Docs"
   },
   "footer": {
     "copyright": "Statigo Framework. Go ile yapıldı."
