feat: add i18n support for docs UI and fix Turkish anchors
- Add i18n instance to docs handler
- Translate sidebar titles, "Documentation", "On this page" etc.
- Update template to use translation keys (t function)
- Add translation keys to en.json and tr.json for:
  - docs.title, docs.on_this_page
  - All sidebar items (overview, getting_started, etc.)
  - Error messages (not_found, not_found_message)

This fixes Turkish docs showing English UI elements.

--- a/translations/en.json
+++ b/translations/en.json
@@ -4,6 +4,21 @@
     "about": "About",
     "docs": "Docs"
   },
+  "docs": {
+    "title": "Documentation",
+    "on_this_page": "On this page",
+    "overview": "Overview",
+    "getting_started": "Getting Started",
+    "routing": "Routing",
+    "middleware": "Middleware",
+    "caching": "Caching",
+    "i18n": "i18n",
+    "templates": "Templates",
+    "configuration": "Configuration",
+    "cli": "CLI",
+    "not_found": "Documentation Not Found",
+    "not_found_message": "The documentation page you're looking for doesn't exist."
+  },
   "footer": {
     "copyright": "Statigo Framework. Built with Go."
   },
